# galapix-py

./: .gitignore  Makefile  README.md  SESSION_NOTES.md  galapix-exe.py  pyproject.toml
galapix-prepare-rs/: Cargo.toml  README.md
galapix-prepare-rs/src/: db.rs  discover.rs  main.rs  prepare.rs  vips.rs
galapix_py/: __init__.py  app.py  cli.py  cli_prepare.py  cli_view.py  database.py  database_thread.py  image.py  jobs.py  models.py  providers.py  sdl_viewer.py  tiling.py  viewer.py  viewer_state.py  workspace.py
scripts/: galacfg.py  galagroup.cfg  galapix-exe.py  galapix.cfg  galaview-group.py
tests/: test_core.py
