[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "galapix-py"
version = "0.1.0"
description = "Python port of galapix using libvips and PyOpenGL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "PyOpenGL>=3.1.7",
  "PySDL2>=0.9.16",
  "pyvips>=2.2.2",
]

[project.scripts]
galapix-py = "galapix_py.cli:main"
galapix-clean = "galapix_py.cli:cleanup_main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
