[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "galapix-py"
version = "0.1.0"
description = "Python port of galapix using Pillow and PyOpenGL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "Pillow>=10.0",
  "PyOpenGL>=3.1.7",
  "PySDL2>=0.9.16",
]

[project.scripts]
galapix-py = "galapix_py.cli:main"
galapix-prepare = "galapix_py.cli_prepare:main"
galapix-clean = "galapix_py.cli:cleanup_main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
